--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -19,15 +19,10 @@ body
   font-weight: 400;
   line-height: 1.5em;
   width: 100vw;
-  height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  max-width: 100%;
-  max-height: 100vh;
+  height: fit-content;
 
-  display: flex;
-  flex-direction: column;
+  max-width: 100%;
+
 }
 
 
@@ -284,11 +279,11 @@ p
 
 
 .info-sections {
-    max-width: 100%;
     margin-top: 8rem;
     background-color: rgba(255,255,255, 0.9);
     height: auto;
-    padding: 10px 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .info-sections-title {
