--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -4,7 +4,7 @@
 
 	<!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="keywords" content="">
     <meta name="description" content="">
 
@@ -29,34 +29,63 @@
 	<link rel="stylesheet" href="{{	url_for('static', filename='css/layout.css') }}" />
 
 	<!-- Font Awesome for Social buttons -->
-   <!-- <script src="https://kit.fontawesome.com/8c81907eaa.js"></script>-->
 	<script src="https://kit.fontawesome.com/8c81907eaa.js" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 	{% block head %}{% endblock %}
-{% include 'includes/_navbar.html' %}
+
 </head>
 
-<body class="d-flex flex-column min-vh-100"
+<style>
+	.page_bg:before {
 		{% if active_page == 'testimonials' %}
-			style="background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{url_for('static', filename='background-images/testimonials-bg.jpg')}});
-				background-size: cover; background-attachment: fixed; background-repeat: no-repeat; background-position: 50% 50%;"
+			background: url({{url_for('static', filename='background-images/testimonials-bg.jpg')}}) no-repeat center center;
+
 		{% elif active_page == 'home' %}
-			style="background-image: url({{url_for('static', filename='background-images/home-bg.jpg')}});
-    background-repeat: no-repeat; background-size: cover; background-attachment: fixed;"
+			background: url({{url_for('static', filename='background-images/home-bg.jpg')}}) no-repeat center center;
+
 		{% elif active_page == 'gallery' %}
-			style="background: url({{url_for('static', filename='background-images/gallery-bg.jpg')}});
-					 background-size: cover; background-attachment: fixed; background-repeat: no-repeat;"
+			background: url({{url_for('static', filename='background-images/gallery-bg.jpg')}}) no-repeat center center;
+
 		{% elif active_page == 'contact' %}
-			style="background: linear-gradient(rgba(240, 240, 240, 0.1), rgba(240, 240, 240, 0.1)), url({{url_for('static', filename='background-images/contact-bg.jpg')}});
-			background-size: cover; background-attachment: fixed; background-position: 40% 50%;"
+			background: linear-gradient(rgba(240, 240, 240, 0.1), rgba(240, 240, 240, 0.1)), url({{url_for('static', filename='background-images/contact-bg.jpg')}}) no-repeat 40% center;
+
 		{% elif active_page == 'login' or active_page == 'admin' %}
-			style="background: linear-gradient(rgba(240, 240, 240, 0.1), rgba(240, 240, 240, 0.1)), url({{ url_for('static', filename='background-images/login-bg.JPG') }});
-				background-size: cover; background-repeat: no-repeat; display: flex;"
+			background: linear-gradient(rgba(240, 240, 240, 0.1), rgba(240, 240, 240, 0.1)), url({{ url_for('static', filename='background-images/login-bg.JPG') }}) no-repeat;
+
 		{% endif %}
->
+
+		content: "";
+		  display: block;
+		  position: fixed;
+		  left: 0;
+		  top: 0;
+		  width: 100%;
+		  height: 100%;
+		  z-index: -10;
+		  -webkit-background-size: cover;
+		  -moz-background-size: cover;
+		  -o-background-size: cover;
+		  background-size: cover;
+
+	}
+
+	/* Then tablets, laptops and desktops (768px and up) */
+	@media only screen and (max-width: 768px) {
+		.page_bg{
+			{% if active_page == 'testimonials' %}
+				<!--background-size: 100% 100vh;-->
+
+			{% endif %}
+			}
+		}
+</style>
+
+<body class="d-flex flex-column page_bg">
+
+	{% include 'includes/_navbar.html' %}
 
 
 	{% block body %}{% endblock %}
