--- a/flaskr/templates/testimonial_form.html
+++ b/flaskr/templates/testimonial_form.html
@@ -1,11 +1,11 @@
-
+{% set active_page = "testimonials" %}
 {% extends 'layout.html' %}
 
 {% block body %}
 
 <div id="main-content" class="main-content" style="">
     <!--title banner-->
-    <header class="testimonial-banner">
+    <header class="">
         {% include 'includes/_messages.html' %}
         <div class="container-md text-center" style="max-width: 100%;">
             <div class="row justify-content-start">
