cleaned up code and reconfigured settings for cloud

--- a/flaskr/templates/testimonial_email_receipt.html
+++ b/flaskr/templates/testimonial_email_receipt.html
@@ -11,7 +11,7 @@
         <p class="lead">Allan Gilbert Builders has received your testimonial and it's pending approval.</p>
         <p>Here's what you sent: </p>
 
-        <p class="email-font">{{name}} <small>({{ email }})</small><i> from {{ town }}, NH</i>: </p>
+        <p class="email-font">{{name}}<i> from {{ town }}, NH</i>: </p>
         <p class="email-font" style="padding: 20px">{{ message }}</p>
         <br>
         <p class="lead">This email was sent from <a href="{{ url }}">AllanGilbertBuilders.com</a></p>
