--- a/flaskr/templates/view_image.html
+++ b/flaskr/templates/view_image.html
@@ -11,7 +11,7 @@
         <div class="col-lg text-center">
             <div>
                 <div>
-                    <img class="img-fluid" src="{{image_path}}" alt="{{ filename }}">
+                    <img class="img-fluid" src="{{url_for('static', filename='uploads/'+ project_name + '/' + filename)}}" alt="{{ filename }}">
                 </div>
             </div>
             {% if session.logged_in %}
