image code changes

--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -44,7 +44,7 @@
 			background: url({{url_for('static', filename='background-images/testimonials-bg.jpg')}}) no-repeat center center;
 
 		{% elif active_page == 'home' %}
-			background: url({{url_for('static', filename='background-images/home-bg.jpg')}}) no-repeat center center;
+			background: url({{url_for('../../static', filename='background-images/home-bg.jpg')}}) no-repeat center center;
 
 		{% elif active_page == 'gallery' %}
 			background: url({{url_for('static', filename='background-images/gallery-bg.jpg')}}) no-repeat center center;
