--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -41,19 +41,21 @@
 <style>
 	.page_bg:before {
 		{% if active_page == 'testimonials' %}
-			background: url({{url_for('static', filename='background-images/testimonials-bg.jpg')}}) no-repeat center center;
+			<!-- local filesystem commented out-->
+			<!--background: url({{url_for('static', filename='background-images/testimonials-bg.jpg')}}) no-repeat center center;-->
+			background: url('../../static/background-images/testimonials-bg.jpg') no-repeat center center;
 
 		{% elif active_page == 'home' %}
 			background: url('../../static/background-images/home-bg.jpg') no-repeat center center;
 
 		{% elif active_page == 'gallery' %}
-			background: url({{url_for('static', filename='background-images/gallery-bg.jpg')}}) no-repeat center center;
+			background: url('../../static/background-images/gallery-bg.jpg') no-repeat center center;
 
 		{% elif active_page == 'contact' %}
-			background: linear-gradient(rgba(240, 240, 240, 0.1), rgba(240, 240, 240, 0.1)), url({{url_for('static', filename='background-images/contact-bg.jpg')}}) no-repeat 40% center;
+			background: linear-gradient(rgba(240, 240, 240, 0.1), rgba(240, 240, 240, 0.1)), url('../../static/background-images/contact-bg.jpg') no-repeat 40% center;
 
 		{% elif active_page == 'login' or active_page == 'admin' %}
-			background: linear-gradient(rgba(240, 240, 240, 0.1), rgba(240, 240, 240, 0.1)), url({{ url_for('static', filename='background-images/login-bg.jpg') }}) no-repeat;
+			background: linear-gradient(rgba(240, 240, 240, 0.1), rgba(240, 240, 240, 0.1)), url('../../static/background-images/login-bg.jpg') no-repeat;
 
 		{% endif %}
 
