--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -36,6 +36,9 @@
 
 	{% block head %}{% endblock %}
 
+	<link rel="preload" href="url('../../static/background-images/testimonials-bg.jpg')" as="image"/>
+	<link rel="preload" href="url('../../static/background-images/home-bg.jpg')" as="image"/>
+
 </head>
 
 <style>
