--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -36,8 +36,11 @@
 
 	{% block head %}{% endblock %}
 
-	<link rel="preload" href="url('../../static/background-images/testimonials-bg.jpg')" as="image"/>
-	<link rel="preload" href="url('../../static/background-images/home-bg.jpg')" as="image"/>
+	<link rel="preload" href="../../static/background-images/testimonials-bg.jpg" as="image"/>
+	<link rel="preload" href="../../static/background-images/home-bg.jpg" as="image"/>
+	<link rel="preload" href="../../static/background-images/gallery-bg.jpg" as="image"/>
+	<link rel="preload" href="../../static/background-images/contact-bg.jpg" as="image"/>
+	<link rel="preload" href="../../static/background-images/login-bg.jpg" as="image"/>
 
 </head>
 
