home page cleanup

--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -36,6 +36,7 @@
 
 	{% block head %}{% endblock %}
 
+	<!--preload background images-->
 	<link rel="preload" href="../../static/background-images/testimonials-bg.jpg" as="image"/>
 	<link rel="preload" href="../../static/background-images/home-bg.jpg" as="image"/>
 	<link rel="preload" href="../../static/background-images/gallery-bg.jpg" as="image"/>
