--- a/flaskr/templates/testimonial_request.html
+++ b/flaskr/templates/testimonial_request.html
@@ -7,10 +7,15 @@
         <h2 class="display-3 lead">Post your Testimonial</h2>
         <hr>
         <br>
-        <p class="lead">Allan Gilbert Builders is requesting for you to post how your experience was.</p>
+        <p>{{ name }},</p>
+        <p>I hope this finds you well.  AGB has updated their website and Allan is hoping you will complete a small post regarding your building experience. </p>
+
+        <p>We thank you in advance,</p>
+        <p>Allan Gilbert Builders</p>
+        <br>
         <p class="lead"><a href="{{ matching_url }}">Follow the link to post your testimonial!</a></p>
 
-        <p class="">* Link expires in 24 hours</p>
+        <p class=""><small>* Link expires in 72 hours</small></p>
 
 
 
