--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -111,10 +111,10 @@
 
 
     <!--projects-->
-    <div class="container-md" style="max-width:100%;">
+    <div class="container-md" style="max-width:100%; padding: 0px 20px;">
         <div class="row justify-content-evenly">
             {% for project, thumbnail in project_data %}
-            <div class="col-md-4 img-thumbnail text-center project__wrap" style="margin-top: 3%; margin-bottom: 3%; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
+            <div class="col-md-4 text-center project__wrap" style="margin-top: 3%; margin-bottom: 3%; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
                 <a href="{{ url_for('blueprint.view_project', project_name=project[1]) }}" style="text-decoration: none;" class="text-dark">
                     <div class="row justify-content-center text-center project_description" style="margin-bottom: 30px; border: 1px solid black;">
                         <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
@@ -123,7 +123,7 @@
 
                     </div>
                     <div class="row align-items-center text-center" style="">
-                        <div class="col-sm-auto">
+                        <div class="col-sm">
                             <button class="buttons btn btn-outline-primary"
                                 data-callback='onSubmit'
                                 data-action='submit'>View Project</button>
