--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -114,31 +114,32 @@
     <div class="container-md" style="max-width:100%; padding: 0px 20px;">
         <div class="row justify-content-evenly">
             {% for project, thumbnail in project_data %}
-            <div class="col-md-3 img-thumbnail project__wrap" style="margin-left: 2px; margin-right: 2px; padding: 15px 20px; margin-top: 3%; margin-bottom: 3%; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
-                <a href="{{ url_for('blueprint.view_project', project_name=project[1]) }}" style="text-decoration: none;" class="text-dark">
-                    <div class="row justify-content-center text-center project_description" style="margin-bottom: 30px; border: 1px solid black;">
-                        <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
-                        <p class="text-md">{{ project[4] }}, NH</p>
-                        <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
+            <div class="col-md-3 project__wrap" style="margin-left: 2px; margin-right: 2px; padding: 15px 20px; margin-top: 3%; margin-bottom: 3%;">
+                <div class="img-thumbnail" style="background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
+                    <a href="{{ url_for('blueprint.view_project', project_name=project[1]) }}" style="text-decoration: none;" class="text-dark">
+                        <div class="row justify-content-center text-center project_description" style="margin-bottom: 30px; border: 1px solid black;">
+                            <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
+                            <p class="text-md">{{ project[4] }}, NH</p>
+                            <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
 
-                    </div>
-                    <div class="row align-items-center text-center" style="">
-                        <div class="col-sm">
-                            <button class="buttons btn btn-outline-primary"
-                                data-callback='onSubmit'
-                                data-action='submit'>View Project</button>
                         </div>
-                    </div>
-                </a>
+                        <div class="row align-items-center text-center" style="">
+                            <div class="col-sm">
+                                <button class="buttons btn btn-outline-primary"
+                                    data-callback='onSubmit'
+                                    data-action='submit'>View Project</button>
+                            </div>
+                        </div>
+                    </a>
 
-                {% if session.logged_in %}
-                <button class="btn btn-default" style="">
-                  <form action="{{ url_for('blueprint.delete_project', project_id=project[0]) }}" method="post">
-                      <input type="submit" value="Delete" name="delete-button" onclick="return confirm('Are you sure you want to delete this project?');" class="btn btn-danger">
-                  </form>
-                </button>
-                {% endif %}
-
+                    {% if session.logged_in %}
+                    <button class="btn btn-default" style="">
+                      <form action="{{ url_for('blueprint.delete_project', project_id=project[0]) }}" method="post">
+                          <input type="submit" value="Delete" name="delete-button" onclick="return confirm('Are you sure you want to delete this project?');" class="btn btn-danger">
+                      </form>
+                    </button>
+                    {% endif %}
+                </div>
             </div>
             {% endfor %}
             {{ pagination.links }}
