fixed bug with testimonials view project by adding a redirect

--- a/flaskr/templates/testimonials.html
+++ b/flaskr/templates/testimonials.html
@@ -58,7 +58,7 @@
                     <!--<p><a href="{{ url_for('blueprint.view_project_by_id', project_id=i.project_id) }}">View the Project</a></p>-->
                     <p>
                         <form action="{{ url_for('blueprint.view_project_by_id', project_id=i.project_id) }}">
-                            <input type="submit" value="View the Project" style="vertical-align:bottom;overflow:visible; font-size:1em; display:inline;  margin:0; padding:0; border:0; border-bottom:1px solid blue; color:blue; cursor:pointer;" class="bg-white bg-opacity-0">
+                            <input type="submit" value="View the Project" style="vertical-align:bottom;overflow:visible; font-size:1em; display:inline;  margin:0; padding:0; border:0; border-bottom:1px solid blue; color:blue; cursor:pointer; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0));">
                         </form>
                     </p>
                 {% endif %}
