tweaks for search engine appearance

--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -5,8 +5,10 @@
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Allan Gilbert Builders, AGB, builder, NH, New Hampshire, Lakes Region">
+    <meta name="description" content="Allan Gilbert Builders is a family owned and operated business, three generations
+                        and growing, we have been dedicated to crafting exceptional living
+                        spaces for our clients surrounding the Lakes Region. Located in Belmont, NH.">
 
     <!--favicons-->
     <link rel="apple-touch-icon" sizes="180x180" href="{{	url_for('static', filename='favicon_io/apple-touch-icon.png') }}">
@@ -18,7 +20,10 @@
 	{% if title %}
 		<title>Allan Gilbert Builders - {{ title }}</title>
 	{% else %}
-		<title>Allan Gilbert Builders</title>
+		<title>
+			Allan Gilbert Builders, a family owned and operated business, dedicated to crafting exceptional
+			 living spaces for clients surrounding the Lakes Region in New Hampshire
+		</title>
 	{% endif %}
 
 
