--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -96,9 +96,9 @@
 
 {% if active_page == 'login' %}
 {% else %}
-	<footer class="mt-auto" style="padding-top: 30px;">
+	<footer class="mt-auto bg-light bg-opacity-25" style="padding-top: 20px;">
 		<div class="container-md">
-			<div class="row justify-content-center">
+			<div class="row justify-content-center text-md">
 
 				<div class="col-md-2" style="">
 					<a class="text-dark" href="{{ url_for('blueprint.contact') }}" style="text-decoration:none">Contact</a>
@@ -112,7 +112,7 @@
 			</div>
 			<div class="row justify-content-center" style="padding-top: 1%;">
 				<div class="col-md-4">
-					<p class="text-sm" style="">Call:
+					<p class="text-md" style="">Call:
                         <a href="tel:603-235-7427" class="text-dark" style="text-decoration:none">
                             603.235.7427</a>
                     </p>
