made changes to navbar links to improve clarity (utilizing text shadows) also on bg upload and changes to gallery projects when on mobile (chrome & safari don't register hovering when scrolling)

--- a/flaskr/templates/contact.html
+++ b/flaskr/templates/contact.html
@@ -16,7 +16,7 @@
             <form method="post" action="" class="" enctype="multipart/form-data">
                 <div class="row justify-content-end" style="font-weight: 500;">
                     <div class="col-3 form-labels" style="text-align: right;">
-                            <p class="font-med-bold text-normal">Change Background</p>
+                            <p class="font-med-bold text-normal upload_bg text-light">Change Background</p>
                         {{ image_form.bg_image(class="form-control", style="font-size: 10px;") }}
                             <button class="buttons btn btn-outline-primary btn-sm"
                             data-callback='onSubmit'
