--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -354,14 +354,23 @@ p
 
 
 
+
 .gallery_title {
-    -webkit-text-stroke: 1px black;
+    text-shadow:
+       1px 1px 0 #000,
+     -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
 }
 
 .project_link {
-    -webkit-text-stroke: 0.1px black;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.0));
-
+    text-shadow:
+       .5px .5px 0 #000,
+     -.5px -.5px 0 #000,
+      .5px -.5px 0 #000,
+      -.5px .5px 0 #000,
+       .5px .5px 0 #000;
 }
 
 /* carousel */
@@ -397,6 +406,14 @@ p
 
 }
 
+@media screen and (max-width: 600px) {
+    project_description {
+        visibility: visible;
+        opacity: 1;
+
+    }
+}
+
 
 
 #info {
@@ -423,5 +440,11 @@ p
 }
 
 .upload_bg {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0.0));
+    /*background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0.0));*/
+    text-shadow:
+       .5px .5px 0 #000,
+     -.5px -.5px 0 #000,
+      .5px -.5px 0 #000,
+      -.5px .5px 0 #000,
+       .5px .5px 0 #000;
 }
