--- a/flaskr/static/css/navbar.css
+++ b/flaskr/static/css/navbar.css
@@ -5,9 +5,29 @@
 .navbar_layout {
     /*background-color: var(--backgroundColor);*/
     /*background: linear-gradient(to bottom, rgba(240, 240, 240, 0.4), #E4C4A0, rgba(240, 240, 240, 0.0));*/
-    font-size: 20px;
+    font-size: 21px;
     padding-left: 0px;
     padding-right: 0px;
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+.nav_links {
+    text-shadow:
+       0.7px 0.7px 0 #000,
+     -0.7px -0.7px 0 #000,
+      0.7px -0.7px 0 #000,
+      -0.7px 0.7px 0 #000,
+       0.7px 0.7px 0 #000;
+}
+
+.nav_links:hover {
+    font-size: 22px;
+    /*text-decoration: underline;*/
+    text-shadow:
+       1px 1px 0 #000,
+     -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
 }
