--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -20,7 +20,7 @@
         <form method="post" action="" class="" enctype="multipart/form-data">
             <div class="row justify-content-end" style="font-weight: 500;">
                 <div class="col-3 form-labels" style="text-align: right;">
-                        <p class="font-med-bold text-normal">Change Background</p>
+                        <p class="font-med-bold text-normal upload_bg text-light">Change Background</p>
                     {{ image_form.bg_image(class="form-control", style="font-size: 10px;") }}
                         <button class="buttons btn btn-outline-primary btn-sm"
                         data-callback='onSubmit'
@@ -114,7 +114,7 @@
     <div class="container-md" style="max-width:100%; padding: 0px 20px;">
         <div class="row justify-content-evenly">
             {% for project, thumbnail in project_data %}
-            <div class="col-md-4 project__wrap" style="padding: 10px 10px; margin-top: 2%; margin-bottom: 2%;">
+            <div class="col-md-4 project__wrap" style="padding: 10px 10px; margin-top: 2%; margin-bottom: 2%;" onclick="">
                 <div class="img-thumbnail" style="padding: 15px 15px; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
                     <a href="{{ url_for('blueprint.view_project', project_name=project[1]) }}" style="text-decoration: none;" class="text-dark">
                         <div class="row justify-content-center text-center project_description" style="margin-bottom: 30px; border: 1px solid black;">
@@ -124,8 +124,13 @@
 
                         </div>
                         <div class="row align-items-center text-center" style="">
-                            <div class="col-sm">
+                            <div class="col-sm d-none d-md-block"> <!--hide on screens smaller than md-->
                                 <button class="buttons btn btn-outline-primary"
+                                    data-callback='onSubmit'
+                                    data-action='submit'>View Project</button>
+                            </div>
+                            <div class="col-sm d-md-none"> <!--hide on screens md & wider-->
+                                <button class="buttons btn btn-primary"
                                     data-callback='onSubmit'
                                     data-action='submit'>View Project</button>
                             </div>
