added edit functionality to added projects

--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -28,7 +28,6 @@
         </div>
         {% endif %}
 
-
         <!--welcome preview-->
         <div class="container-md info-sections" style="max-width:100%; padding-left: 40px; padding-right: 40px;">
             <div class="row justify-content-center">
@@ -78,7 +77,7 @@
             <div class="row">
                 <div class="col-md-auto">
                     <p class="text-xl">
-                        At Allen Gilbert Builders, we take pride in offering a comprehensive
+                        At Allan Gilbert Builders, we take pride in offering a comprehensive
                         range of construction and remodeling services tailored to meet your
                         unique needs and preferences. Our experienced team of professionals is
                         dedicated to delivering quality craftsmanship and innovative solutions
