--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -31,12 +31,16 @@
   <!-- Latest compiled and minified CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
+	<!--css link-->
 	<link rel="stylesheet" href="{{	url_for('static', filename='css/layout.css') }}" />
 
 	<!-- Font Awesome for Social buttons -->
 	<script src="https://kit.fontawesome.com/8c81907eaa.js" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!--jquery-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 
 	{% block head %}{% endblock %}
