--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -448,3 +448,30 @@ p
       -.5px .5px 0 #000,
        .5px .5px 0 #000;
 }
+
+.special-edit {
+  position: relative;
+}
+.special-edit input {
+  font-family: 'FontAwesome';
+  font-size: 2rem;
+  padding: .5rem 0 .5rem 2.5rem;
+  width: 100%;
+  border: none;
+  border-bottom: transparent 3px solid;
+  outline: 0;
+  transition: .35s ease;
+}
+.special-edit input:hover, .special-edit input:focus {
+  background-color: #f1f1f1;
+  border-bottom: #ddd 3px dotted;
+}
+.special-edit:after {
+  font-family: 'FontAwesome';
+  content: '\f044';
+  position: absolute;
+  top: 1rem;
+  left: .5rem;
+  color: gray;
+  font-size: 1.5rem;
+}
