--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -391,6 +391,12 @@ p
     max-width: none;
 }
 
+.carousel-img {
+  width: 100%;
+  height: auto;
+  max-height: 20vh;
+}
+
 
 .project_description {
     visibility: hidden;
