--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -391,11 +391,11 @@ p
     max-width: none;
 }
 
-.carousel-img {
+/*.carousel-img {
   width: 100%;
   height: auto;
   max-height: 20vh;
-}
+}*/
 
 
 .project_description {
