--- a/flaskr/templates/contact.html
+++ b/flaskr/templates/contact.html
@@ -112,13 +112,11 @@
             </div>
         </div>
         <div class="row justify-content-between" style="text-align: center; padding-bottom: 30px;">
-            <div class="col-md" style="">
-                <img class="img-fluid" src="{{ url_for('static', filename='contact-images/award.png') }}" alt="" style="max-height: 10rem;">
+            {% for img in img_list %}
+            <div class="col-md" style="margin-bottom: 1.5rem;">
+                <img class="img-fluid" src="{{ img }}" alt="" style="max-height: 10rem;">
             </div>
-            <div class="col-md">
-                <img class="img-fluid" src="{{ url_for('static', filename='logo/FullLogo_Transparent_NoBuffer.png') }}" alt="" style="max-height: 10rem;">
-            </div>
-
+            {% endfor %}
 
         </div>
     </div>
