--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -2,12 +2,13 @@
     {% set active_page = "gallery" %}
 
     {% block head %}
-    <!--<style>
-        #previewCarousel{
-        position: absolute;
-        z-index: -1;
-      }
-    </style>-->
+        <!-- PRELOADING -->
+        {% for img in images %}
+            <link rel="preload" href="{{ img }}" as="image"/>
+        {% endfor %}
+        {% for project, thumbnail in project_data %}
+            <link rel="preload" href="{{ thumbnail }}" as="image"/>
+        {% endfor %}
     {% endblock %}
 
     {% block body %}
@@ -117,13 +118,15 @@
         <div class="row justify-content-evenly">
             {% for project, thumbnail in project_data %}
             <div class="col-md-4 project__wrap" style="padding: 10px 10px; margin-top: 2%; margin-bottom: 2%;" onclick="">
-                <div class="img-thumbnail" style="padding: 15px 15px; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover; background-position: 50% 50%; height: auto; width: 100%;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
+                <div class="img-thumbnail" style="padding: 15px 15px; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover; background-position: 50% 50%; height: auto; width: 100%;">
                     <a href="{{ url_for('blueprint.view_project', project_name=project[1]) }}" style="text-decoration: none;" class="text-dark">
-                        <div class="row justify-content-center text-center project_description" style="margin-bottom: 30px; border: 1px solid black;">
+                        <div class="row justify-content-center text-center project_description d-none d-md-block" style="margin-bottom: 30px; border: 1px solid black;">
                             <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
                             <p class="text-md">{{ project[4] }}, NH</p>
-                            <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
-
+                        </div>
+                        <div class="row justify-content-center text-center d-md-none" style="margin-bottom: 30px; border: 1px solid black;">
+                            <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
+                            <p class="text-md">{{ project[4] }}, NH</p>
                         </div>
                         <div class="row align-items-center text-center" style="">
                             <div class="col-sm d-none d-md-block"> <!--hide on screens smaller than md-->
