--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -400,6 +400,11 @@ p
   max-height: 20vh;
 }*/
 
+.project_description_no_hover {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .2s, visibility .2s;
+}
 
 .project_description {
     visibility: hidden;
