--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -124,7 +124,7 @@
                             <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
                             <p class="text-md">{{ project[4] }}, NH</p>
                         </div>
-                        <div class="row justify-content-center text-center d-md-none" style="margin-bottom: 30px; border: 1px solid black;">
+                        <div class="row justify-content-center text-center project_description_no_hover d-md-none" style="margin-bottom: 30px; border: 1px solid black;">
                             <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
                             <p class="text-md">{{ project[4] }}, NH</p>
                         </div>
