--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -401,9 +401,9 @@ p
 }*/
 
 .project_description {
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity .2s, visibility .2s;
+    visibility: visible;
+    opacity: 1;
+    background: linear-gradient(rgba(240, 240, 240, 0.5), rgba(240, 240, 240, 0.5))
 }
 
 .project_description_hover {
