hotfix for gallery

--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -400,19 +400,14 @@ p
   max-height: 20vh;
 }*/
 
-.project_description {
-    visibility: visible;
-    opacity: 1;
-    background: linear-gradient(rgba(240, 240, 240, 0.5), rgba(240, 240, 240, 0.5))
-}
 
-.project_description_hover {
+.project_description {
     visibility: hidden;
     opacity: 0;
     transition: opacity .2s, visibility .2s;
 }
 
-.project__wrap:hover .project_description_hover {
+.project__wrap:hover .project_description {
   visibility: visible;
   opacity: 1;
   background: linear-gradient(rgba(240, 240, 240, 0.5), rgba(240, 240, 240, 0.5));
